--- a/styles.css
+++ b/styles.css
@@ -1023,3 +1023,82 @@ body.large-font {
 body.extra-large-font {
     font-size: 20px;
 }
+
+
+
+/* Página de pesquisa */
+
+
+.pesquisa-container {
+    width: 60%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #e6f4ea; /* Cor de fundo padrão */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.pesquisa-container h1 {
+    font-size: 3.0em;
+    color: #4CAF50;
+    margin-bottom: 1.0rem;
+    margin-top: 10px;
+    text-align: center; /* Adicionado para centralizar o título */
+    margin-right: 30px;
+}
+
+.pesquisa-container p {
+    font-size: 1.1em;
+    max-width: 800px;
+    margin: 0 auto 0rem auto;
+    text-align: justify;
+}
+
+.pesquisa-container .observacao {
+    font-size: 0.9em;
+    color: #555;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: center;
+    
+}
+
+.form-pesquisa {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.form-group label {
+    font-size: 1em;
+    color: #2f8f2f;
+}
+
+.form-group select,
+.form-group textarea {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
+button[type="submit"] {
+    padding: 10px 20px;
+    font-size: 1.1em;
+    color: #fff;
+    background-color: #2f8f2f;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+    background-color: #276d27; /* Tom mais escuro de verde para hover */
+}
